--- a/Excellence/Excellence.csproj
+++ b/Excellence/Excellence.csproj
@@ -43,8 +43,10 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="learningPath.cs" />
+    <Compile Include="module.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="records.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
