--- a/Excellence/Excellence.csproj
+++ b/Excellence/Excellence.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="competenciesAwarded.cs" />
     <Compile Include="learningPath.cs" />
     <Compile Include="module.cs" />
     <Compile Include="Program.cs" />
