--- a/ExcellenceTests/ExcellenceTests.csproj
+++ b/ExcellenceTests/ExcellenceTests.csproj
@@ -86,6 +86,9 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\module.xml" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
