README.md foe Excellence test project

--- a/ExcellenceTests/ExcellenceTests.csproj
+++ b/ExcellenceTests/ExcellenceTests.csproj
@@ -81,6 +81,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="README.md" />
     <None Include="Resources\learningPath.xml" />
   </ItemGroup>
   <ItemGroup>
